--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
         <exec osfamily="Linux" failonerror="true" executable="gcc" searchpath="true">
           <arg pathref="cfiles"/>
           <arg value="-o ${c.build.dir}/${name}.so"/>
-          <arg value="-shared -fPIC -g"/>
+          <arg value="-I/usr/lib/jvm/j2sdk1.6-oracle/include/ -I/usr/lib/jvm/j2sdk1.6-oracle/include/linux/ -L/usr/bin/java -L/usr/lib/jvm/j2sdk1.6-oracle/jre/lib/amd64/server/ -shared -fPIC -g -ljvm"/>
         </exec>
         <exec osfamily="Windows" failonerror="true" executable="msvc" searchpath="true">
         </exec>
