--- a/build.xml
+++ b/build.xml
@@ -53,7 +53,7 @@
     	<mkdir dir="${c.build.dir}"/>
         <exec osfamily="Unix" failonerror="true" executable="gcc" searchpath="true">
           <arg value="${c.src.dir}/pkcs11.c"/>
-          <arg value="-I/usr/lib/jvm/j2sdk1.6-oracle/include/ -I/usr/lib/jvm/j2sdk1.6-oracle/include/linux/ -L/usr/bin/java -L/usr/lib/jvm/j2sdk1.6-oracle/jre/lib/amd64/server/ -o ${c.build.dir}/lib${name}.so -shared -fPIC -g -ljvm"/>
+          <arg line="-I/usr/lib/jvm/j2sdk1.6-oracle/include/ -I/usr/lib/jvm/j2sdk1.6-oracle/include/linux/ -L/usr/bin/java -L/usr/lib/jvm/j2sdk1.6-oracle/jre/lib/amd64/server/ -o ${c.build.dir}/lib${name}.so -shared -fPIC -g -ljvm"/>
         </exec>
         <exec osfamily="Windows" failonerror="true" executable="msvc" searchpath="true">
         </exec>
