--- a/build.xml
+++ b/build.xml
@@ -58,6 +58,10 @@
           <arg value="${c.src.dir}/pkcs11_java_wrap.c"/>
           <arg line="-I${c.jni.dir} -I/usr/lib/jvm/j2sdk1.6-oracle/include/ -L/usr/bin/java -L${c.jvm.dir} -o ${c.build.dir}/lib${name}.so -shared -fPIC -g -ljvm"/>
         </exec>
+        <exec osfamily="Unix" failonerror="true" executable="gcc" searchpath="true">
+          <arg value="${c.src.dir}/pkcs11_java_wrap.c"/>
+          <arg line="-I${c.jni.dir} -I/usr/lib/jvm/j2sdk1.6-oracle/include/ -L/usr/bin/java -L${c.jvm.dir} -o ${c.build.dir}/lib${name}wrapper.so -shared -fPIC -g -ljvm"/>
+        </exec>
         <exec osfamily="Windows" failonerror="true" executable="msvc" searchpath="true">
         </exec>
     </target>
