new makefile for c test dir relative paths to links to libs and include

--- a/build.xml
+++ b/build.xml
@@ -13,8 +13,8 @@
     <property name="c.build.dir"   value="C/build"/>
     <property name="c.classes.dir" value="${c.build.dir}/classes"/>
     <property name="c.exec.dir"     value="${c.build.dir}"/>
-    <property name="c.jni.dir"     value="/usr/lib/jvm/java-7-openjdk-amd64/include/"/>
-    <property name="c.jvm.dir"     value="/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/amd64/server/"/>
+    <property name="c.jni.dir"     value="include/java/"/>
+    <property name="c.jvm.dir"     value="lib/"/>
 	<property name="swig.dir"     value="swig"/>
     <property name="swig.file"     value="${swig.dir}/generateProxys.i"/>
 	<property name="swig.preproc.file"     value="${swig.dir}/resolve_macros_for_swig.sh"/>
@@ -28,7 +28,9 @@
     </target>
     <target name="C-clean" >
         <delete dir="${c.build.dir}"/>
-    	
+    		<exec osfamily="Unix" failonerror="true" executable="make" searchpath="true">
+          <arg line="-C ${c.dir} clean"/>
+        </exec>
     </target>
     <target name="SWIG-clean" >
         <delete dir="${swig.generated.dir}"/>
