ant builded bei mir.. könnte bei dir auch gehen test/runAlltests findet die shared libs java code wird von C aus noch nicht gefunden

--- a/C/test/Makefile
+++ b/C/test/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall 
+CFLAGS = -Wall -Wl,-rpath,../../lib/
 
 TESTDIR = .
 TESTNAME = $(TESTDIR)/runallTests
@@ -7,13 +7,13 @@ TESTSOURCES = $(TESTDIR)/maintest.cpp $(TESTDIR)/easytests.cpp
 TESTOBJS := ${TESTSOURCES:.cpp=.o}
 TEST_INCLUDE_DIRS := -I../../include/java/ -I../../include/
 TEST_LIBRARY_DIRS := -L../../lib/
-TEST_LIBRARIES := -lgtest -lpthread
+TEST_LIBRARIES := -lgtest -lpthread -lskytrustpkcs11
 
 %.o: %.cpp 
-	$(CC) -c -o $@ $< $(CFLAGS) $(TEST_INCLUDE_DIRS)
+	$(CC) $(CFLAGS) -c -o $@ $< $(CFLAGS) $(TEST_INCLUDE_DIRS)
 
 test: $(TESTOBJS)
-		$(CC) $(TESTOBJS) -o $(TESTNAME) $(TEST_INCLUDE_DIRS) $(TEST_LIBRARY_DIRS) $(TEST_LIBRARIES)
+		$(CC) $(CFLAGS) $(TESTOBJS) -o $(TESTNAME) $(TEST_INCLUDE_DIRS) $(TEST_LIBRARY_DIRS) $(TEST_LIBRARIES)
 
 testclean:
 	rm -f $(TESTOBJS)
