--- a/C/Makefile
+++ b/C/Makefile
@@ -3,16 +3,17 @@ WRAPSOURCES = pkcs11_java_wrap.c
 SOURCES = pkcs11.c
 LIBRARIES := jvm
 
-CFLAGS = -Wall 
+CFLAGS = -Wall
 SRCDIR = src
 SHAREDFLAGS = -shared -fPIC -g 
 BINDIR = build
-
-#following variables get overwritten through commandline from ant
-INCLUDE_DIRS := $(realpath ../include/java/ ../include/)
-LIBRARY_DIRS := $(realpath ../lib/)
+export INCLUDE_DIRS := $(realpath ../include/java/ ../include/)
+export LIBRARY_DIRS := $(realpath ../lib/)
 NAME = skytrustpkcs11
 WRAPNAME = pkcs11_java_wrap
+
+#following variables get overwritten through commandline from ant
+
 JAR = $(realpath ../lib/PKCS11.jar)
 #end
 CFLAGS += $(foreach includedir,$(INCLUDE_DIRS),-I$(includedir))
@@ -23,10 +24,10 @@ CFLAGS += -DSYKTRUSTJAR=\"$(JAR)\"
 
 pkcs11: $(SRCDIR)/$(SOURCES) pkcs11wrapper
 				$(CC) $(CFLAGS) $(SHAREDFLAGS) $(SRCDIR)/$(SOURCES) -o $(BINDIR)/lib$(NAME).so $(LDFLAGS)
-				ln -s -f $(BINDIR)/lib$(NAME).so $(LIBRARY_DIRS)/lib$(NAME).so
+				ln -s -f $(realpath $(BINDIR)/lib$(NAME).so) $(LIBRARY_DIRS)/lib$(NAME).so
 pkcs11wrapper: $(SRCDIR)/$(WRAPSOURCES)
 				$(CC) $(CFLAGS) $(SHAREDFLAGS) $(SRCDIR)/$(WRAPSOURCES) -o $(BINDIR)/lib$(WRAPNAME).so $(LDFLAGS)
-				ln -s -f $(BINDIR)/lib$(WRAPNAME).so $(LIBRARY_DIRS)/lib$(WRAPNAME).so
+				ln -s -f $(realpath $(BINDIR)/lib$(WRAPNAME).so) $(LIBRARY_DIRS)/lib$(WRAPNAME).so
 all: pkcs11
 
 clean: 
