--- a/build.xml
+++ b/build.xml
@@ -98,6 +98,9 @@
 				<fileset dir="${java.classes.dir}"/>
 				<fileset dir="skytrust-element-java/common/target/classes/"/>
         <fileset dir="skytrust-element-java/core/target/classes/"/>
+        <zipfileset includes="**/*.class" src="/usr/share/java/spring3-web.jar"/>
+        <zipfileset includes="**/*.class" src="/usr/share/java/spring3-core.jar"/>
+        <zipfileset includes="**/*.class" src="/usr/share/java/jackson-core.jar"/>        
      </jar>
     </target>
 
