--- a/C/test/Makefile
+++ b/C/test/Makefile
@@ -11,6 +11,9 @@ TEST_LIBRARIES := gtest pthread skytrustpkcs11
 #following variables get from above makefile
 #INCLUDE_DIRS := ../../include/java/ ../../include/
 #LIBRARY_DIRS := ../../lib/
+ifndef $(DEBUG)
+DEBUG = true
+endif
 #
 
 CFLAGS += $(foreach includedir,$(INCLUDE_DIRS),-I$(includedir))
@@ -30,7 +33,8 @@ test: $(TESTOBJS)
 
 ptest: plaintest.cpp
 		$(CC) $(CFLAGS) plaintest.cpp -o plain -lskytrustpkcs11 -L$(realpath ../../lib/) -Wl,-rpath,$(realpath ../../lib/)
-		
+
+.PHONY:	testclean run	
 testclean:
 	rm -f $(TESTOBJS)
 	rm -f $(TESTNAME)
